--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -20,7 +20,7 @@ body {
 
 .custom-scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: #3b82f6 #1f1f1f;
+  scrollbar-color: #696969 #1f1f1f;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -33,7 +33,7 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #3b82f6;
+  background-color: #363636;
   border-radius: 9999px;
   border: 2px solid #1f1f1f;
 }
